# video-enhancer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codex-issue-fix.yml  codex-issue-triage.yml
desktop/: VideoEnhancer.Desktop.slnx
desktop/VideoEnhancer.Core.Tests/: VideoEnhancer.Core.Tests.csproj
desktop/VideoEnhancer.Core.Tests/Enhancement/: FfmpegCommandBuilderTests.cs  FfmpegProgressParserTests.cs
desktop/VideoEnhancer.Core.Tests/Storage/: JsonFileStoreTests.cs
desktop/VideoEnhancer.Core/Enhancement/: EnhancementRequest.cs  FfmpegCommandBuilder.cs  FfmpegJobRunner.cs  FfmpegLocator.cs  FfmpegProgressParser.cs
desktop/VideoEnhancer.Core/Media/: FfprobeMetadataService.cs  MediaInfo.cs  ThumbnailService.cs
desktop/VideoEnhancer.Core/Storage/: AppPaths.cs  AppSettings.cs  JsonFileStore.cs  MediaLibrary.cs
desktop/VideoEnhancer.Player/: App.xaml  App.xaml.cs  AppServices.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  UiModels.cs  VideoEnhancer.Player.csproj  app.manifest
desktop/VideoEnhancer.Player/Pages/: ExportsPage.xaml  ExportsPage.xaml.cs  LibraryPage.xaml  LibraryPage.xaml.cs  PlayerPage.xaml  PlayerPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
docs/: desktop-player.md  future-ai-backends.md  github-codex-automation.md  usage-and-requirements.md
examples/: commands.md
src/video_enhancer/: __init__.py  cli.py  encoders.py  ffmpeg.py  filter_backends.py  presets.py
tests/: test_cli.py  test_core.py
(+1 files in other folders)
