[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-enhancer"
version = "0.1.0"
description = "Free local FFmpeg video enhancer with upscaling, frame interpolation, and optional hardware encoding."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "bjork" }]
license = { text = "MIT" }
keywords = ["video", "ffmpeg", "upscaling", "frame-interpolation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video :: Conversion",
]

[project.urls]
Homepage = "https://github.com/bjorkepoc/video-enhancer"
Repository = "https://github.com/bjorkepoc/video-enhancer"
Issues = "https://github.com/bjorkepoc/video-enhancer/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
video-enhancer = "video_enhancer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
